src/objects/Student__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <required>true</required>
    <scale>14</scale>
    <type>Location</type>
</CustomField>