src/objects/Student__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <label>Bank Details</label>
    <length>10</length>
    <type>Text</type>
</CustomField>