src/objects/Student__c/fields/Bank_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Phone_Number__c</fullName>
    <label>Bank Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>