src/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>