src/objects/Student__c/fields/Class_Info__c.field-meta.xml
<CustomField>
    <fullName>Class_Info__c</fullName>
    <label>Class Info</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>