src/objects/Student__c/fields/College_URL__c.field-meta.xml
<CustomField>
    <fullName>College_URL__c</fullName>
    <label>College URL</label>
    <type>Url</type>
</CustomField>