src/objects/Student__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>