src/objects/Student__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <label>Father Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>