src/objects/Student__c/fields/Fees_Details__c.field-meta.xml
<CustomField>
    <fullName>Fees_Details__c</fullName>
    <label>Fees Details</label>
    <length>20</length>
    <type>Text</type>
</CustomField>