src/objects/Student__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>