src/objects/Student__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>