src/objects/Student__c/fields/Pending_Exam_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pending_Exam_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Exam Fees</label>
    <type>Checkbox</type>
</CustomField>