src/objects/Student__c/fields/Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Roll_Number__c</fullName>
    <label>Roll Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>