src/objects/Student__c/fields/Subjects_in_which_Back__c.field-meta.xml
<CustomField>
    <fullName>Subjects_in_which_Back__c</fullName>
    <label>Subjects in which Back</label>
    <length>20</length>
    <type>Text</type>
</CustomField>