src/objects/Student__c/fields/X1st_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>X1st_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Sem Back?</label>
    <type>Checkbox</type>
</CustomField>