src/objects/Student__c/fields/X1st_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X1st_Sem_Percentage__c</fullName>
    <label>1st Sem Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>