src/objects/Student__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2st Sem Back?</label>
    <type>Checkbox</type>
</CustomField>