src/objects/Student__c/fields/X2nd_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Sem_Percentage__c</fullName>
    <label>2nd Sem Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>