src/objects/Student__c/fields/X3rd_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Sem_Percentage__c</fullName>
    <label>3rd Sem Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>