src/objects/Student__c/fields/X4st_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>X4st_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4st Sem Back?</label>
    <type>Checkbox</type>
</CustomField>