src/objects/Student__c/fields/X5st_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>X5st_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5st Sem Back?</label>
    <type>Checkbox</type>
</CustomField>