src/objects/Student__c/fields/X6th_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X6th_Sem_Percentage__c</fullName>
    <label>6th Sem Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>